fix playbox spacing issue

--- a/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
+++ b/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
@@ -3,7 +3,6 @@
 .playgroundBox {
   border-radius: 6px;
   border: none;
-  margin-left: rem(0.5);
   margin-top: rem(2);
   position: relative;
   display: flex;
